[package]
name = "sushii-2"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
darkredis = "0.7"
dashmap = "4.0.0-rc6"
dotenv = "0.15"
futures = "0.3"
num_cpus = "1.13"
tracing = "0.1"
tracing-subscriber = "0.2"
serde_json = "1.0.57"
serde = "1.0.114"
toml = "0.5.6"

[dependencies.tokio]
version = "0.2"
features = ["macros", "rt-core"]

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = [ "runtime-tokio", "macros", "postgres", "json", "chrono", "offline" ]

[dependencies.serenity]
version = "0.9.0-rc.0"
features = ["default", "collector"]
