[package]
name = "sushii-2"
version = "0.1.3"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
dashmap = "4.0.0-rc6"
dotenv = "0.15"
futures = "0.3"
hyper = "0.13"
humantime = "2.0"
lazy_static = "1.4"
num_cpus = "1.13"
prometheus = "0.10.0"
prometheus-static-metric = "0.4.0"
regex = "1.3"
serde = "1.0.114"
serde_json = "1.0.57"
toml = "0.5.6"
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.tokio]
version = "0.2"
features = ["macros", "rt-core", "time"]

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = [ "runtime-tokio", "macros", "postgres", "json", "chrono", "offline", "migrate" ]

[dependencies.serenity]
version = "0.9.0-rc.1"
features = ["default", "collector"]
