[package]
name = "sushii-2"
version = "0.2.33"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"
build = "build.rs"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
dashmap = "4.0"
dotenv = "0.15"
futures = "0.3"
humantime = "2.0"
hyper = "0.14"
lazy_static = "1.4"
metrics = "0.14.1"
metrics-exporter-prometheus = "0.3.0"
metrics-util = "0.6.0"
num_cpus = "1.13"
num-format = "0.4"
num-traits = "0.2.14"
rand = "0.7.3"
regex = "1.3"
reqwest = { version = "0.11", features = [ "json" ] }
sentry = {version = "0.22", default-features= false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"]}
serde = "1.0.125"
serde_json = "1.0.57"
serde_yaml = "0.8.14"
tracing = "0.1"
tracing-subscriber = "0.2"
heim = { git = "https://github.com/heim-rs/heim", features = ["cpu", "process", "memory"]}
tracing-attributes = "0.1.13"
tokio-stream = "0.1.3"
deadpool-redis = "0.7.1"
redis = { version = "0.20", features = ["tokio-comp"] }
config = "0.11.0"
thiserror = "1.0.24"

[dependencies.sushii-model]
path = "../sushii-model"

[dependencies.vlive]
git = "https://github.com/drklee3/vlive-rs"
rev = "806a07b0e443fde40024471f7aa6fa5fdb50f909"

[dependencies.lastfm-rs]
git = "https://github.com/KamranMackey/lastfm-rs"
rev = "0fa3b4da337989b56423df995eb75dfc5a1c5259"
# path = "../lastfm-rs"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "time", "signal"]

[dependencies.sqlx]
version= "0.5.2"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "postgres", "json", "chrono", "offline", "migrate", "decimal" ]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
rev = "11918e74ab2eba7d61f94d5b5776d5546913adcd"
# path = "../../serenity"
features = ["collector", "unstable_discord_api", "chrono"]

[build-dependencies.vergen]
version = "4.2.0"
default-features = false
features = ["build", "rustc"]
