[package]
name = "sushii-api"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.juniper]
git = "https://github.com/graphql-rust/juniper"
branch = "master"
features = ["expose-test-schema"]

[dependencies.juniper_rocket_async]
git = "https://github.com/graphql-rust/juniper"
branch = "master"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"

[dependencies.rocket_prometheus]
git = "https://github.com/sd2k/rocket_prometheus"
branch = "async"
