[package]
name = "sushii-api"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper_actix = "0.2.1"
juniper = { version = "0.15.1", features = ["expose-test-schema"] }
actix-web = "3.3.2"
actix-cors = "0.5.3"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"

