[package]
name = "sushii-api"
version = "0.1.3"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

[dependencies]
juniper_actix = "0.2.1"
juniper = { version = "0.15.1", features = ["expose-test-schema"] }
actix-web = "3.3.2"
actix-cors = "0.5.3"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
dotenv = "0.15.0"
async-trait = "0.1.42"
base64 = "0.13.0"

[dependencies.sqlx]
version = "0.4.1"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "postgres", "json", "chrono", "offline", "migrate", "decimal" ]

[dependencies.sushii-model]
path = "../sushii-model"
features = ["graphql"]
