[package]
name = "sushii-feeds"
version = "0.1.6"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
async-trait = "0.1.42"
chrono = "0.4.19"
dashmap = "4.0.2"
dotenv = "0.15.0"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
reqwest = "0.11"
rss = "1.10.0"
serde = "1.0.119"
serde_json = "1.0.61"
strfmt = "0.1.6"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
humantime = "2.1.0"
thiserror = "1.0.24"

[dependencies.twilight-http]
version = "0.7"
default-features = false
features = ["rustls-webpki-roots"]

[dependencies.twilight-embed-builder]
version = "0.7"

[dependencies.twilight-model]
version = "0.7"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "time", "signal"]

[dependencies.vlive]
# path = "../../vlive-rs"
git = "https://github.com/drklee3/vlive-rs"
rev = "806a07b0e443fde40024471f7aa6fa5fdb50f909"

[dependencies.sushii-model]
path = "../sushii-model"
features = ["feed_process"]

[dependencies.sqlx]
version= "0.5.2"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "postgres", "json", "chrono", "offline", "migrate", "decimal" ]
