[package]
name = "sushii-interactions"
version = "0.1.0"
edition = "2021"

[lib]
name = "sushii_interactions"
path = "src/lib.rs"

[[bin]]
name = "sushii-interactions"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "1.7.1"
twilight-model = "0.9"
twilight-http = "0.9"
twilight-interactions = "0.9"
twilight-validate = "0.9.0"
dotenv = "0.15.0"
tokio = {version ="1.8.2", features = ["rt-multi-thread"]}
serde = "1.0.126"
serde_json = "1.0.64"
config = "0.11.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
futures = "0.3.15"
tokio-stream = "0.1.7"
thiserror = "1.0.26"
chrono = "0.4.19"
metrics-exporter-prometheus = "0.6.0"
metrics-util = "0.10.0"
metrics = "0.17.0"
async-stream = "0.3.2"
async-trait = "0.1.50"
