[package]
name = "sushii-model"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

[features]
default = []
graphql = ["juniper", "dataloader"]
feed_process = []

[dependencies]
chrono = "0.4"
base64 = "0.13.0"
dashmap = "4.0.0-rc6"
humantime = "2.0.1"
rand = "0.7.3"
rand_distr = "0.3.0"
serde = "1.0.114"
serde_json = "1.0.57"
tracing = "0.1"
regex = "1.4.2"
lazy_static = "1.4.0"
metrics = "0.14.1"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "time", "signal"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "postgres", "json", "chrono", "offline", "migrate", "decimal" ]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
rev = "badb44891a73bc27df8b3e39d4baf92675e868a4"
features = ["collector"]

[dependencies.juniper]
version = "0.15.1"
optional = true

[dependencies.dataloader]
version = "0.14"
optional = true
default-features = false
features = ["runtime-tokio"]
