[package]
name = "sushii-rules-engine"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"
default-run = "sushii_rules_worker"

[lib]
name = "sushii_rules"
path = "src/lib.rs"

[[bin]]
name = "sushii_rules_worker"
path = "src/main.rs"

[[bin]]
name = "sushii_rules_exporter"
path = "src/export.rs"

[dependencies]
aho-corasick = "0.7.15"
anyhow = "1.0.40"
async-recursion = "0.3.2"
async-trait = "0.1.42"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "4.0.2"
deadpool-redis = "0.7.1"
redis = { version = "0.20", features = ["tokio-comp"] }
futures = "0.3.12"
handlebars = "3.5.3"
schemars = { version = "0.8.0", features = ["chrono", "preserve_order"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["full"] }
twilight-model = "0.3.2"
typemap_rev = "0.1.4"
typetag = "0.1"
dotenv = "0.15.0"
config = "0.11.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
twilight-http = "0.3.6"
lingua = "1.2.0"
reqwest = "0.11.3"
language-api = { git = "https://github.com/sushiibot/language-api", rev ="761f467177fdb287c2a3bf9e10e4cd46bcf81ca5" }
metrics = "0.14.2"
metrics-exporter-prometheus = "0.3.0"
metrics-util = "0.6.2"
