[package]
name = "sushii-webhooks"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
config = "0.11.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
twilight-http = "0.3.7"
serde = "1.0.125"
dotenv = "0.15.0"
