[package]
name = "sushii-webhooks"
version = "0.1.1"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

[dependencies]
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
config = "0.11.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
twilight-http = "0.3.7"
serde = "1.0.125"
dotenv = "0.15.0"
twilight-model = "0.3.6"
thiserror = "1.0.24"
